@@ -6,16 +6,16 @@
 \usage{
 plotFluxTimeDaily(eList, yearStart = NA, yearEnd = NA, tinyPlot = FALSE,
   fluxUnit = 3, fluxMax = NA, randomCensored = FALSE,
-  printTitle = TRUE, usgsStyle = FALSE, cex = 0.8, cex.axis = 1.1,
-  cex.main = 1.1, customPar = FALSE, col = "black", lwd = 1,
-  prettyDate = TRUE, ...)
+  printTitle = TRUE, plotGenFlux = TRUE, usgsStyle = FALSE, cex = 0.8,
+  cex.axis = 1.1, cex.main = 1.1, customPar = FALSE, col = "black",
+  lwd = 1, prettyDate = TRUE, ...)
 }
 \arguments{
 \item{eList}{named list with at least the Daily, Sample, and INFO dataframes}
 
 \item{yearStart}{numeric specifying the starting date (expressed as decimal years, for example 1989.0) for the plot}
 
-\item{yearEnd}{numeric specifiying the ending date for the plot}
+\item{yearEnd}{numeric specifying the ending date for the plot}
 
 \item{tinyPlot}{logical variable, if TRUE plot is designed to be short and wide, default is FALSE.}
 
@@ -26,6 +26,9 @@ plotFluxTimeDaily(eList, yearStart = NA, yearEnd = NA, tinyPlot = FALSE,
 \item{randomCensored}{logical, if TRUE plot a random value for censored data.  Default is FALSE.}
 
 \item{printTitle}{logical variable if TRUE title is printed, if FALSE title is not printed (this is best for a multi-plot figure)}
+
+\item{plotGenFlux}{logical variable. If \code{TRUE}, annual flux points from 
+\code{WRTDSKalman} output are plotted, if \code{FALSE} WRTDS flux is plotted.}
 
 \item{usgsStyle}{logical option to use USGS style guidelines. Setting this option
 to TRUE does NOT guarantee USGS compliance. It will only change automatically
